update redis duratility

--- a/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
+++ b/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
@@ -41,30 +41,7 @@ redis 的内存淘汰策略是指<span style="color: red;">**在 redis 用于缓
 * redis LRU 算法是一种近似的 LRU 的算法，因为真正的 LRU 算法会消耗更多的内存；
 
 ### 新的 LFU 模式
-从 redis 4.0 开始，可以使用最不常用的逐出模式。此模式可能效果更好（提供更好的 命中率/未命中率）在某些情况下。在 LFU 模式下，redis 将尝试跟踪 项目访问的频率，因此很少使用的项目被逐出。这意味着 使用的密钥通常有更高的机会保留在内存中。
-
-要配置 LFU 模式，可以使用以下策略：
-
-volatile-lfu在设置了过期的密钥中使用近似的 LFU 逐出。
-allkeys-lfu使用近似 LFU 逐出任何密钥。
-LFU 的近似值类似于 LRU：它使用一个称为 Morris 计数器的概率计数器来估计对象访问频率，每个对象仅使用几个位，并结合衰减周期，以便计数器随时间推移而减少。在某些时候，我们不再希望将密钥视为频繁访问的密钥，即使它们在过去也是如此，以便算法可以适应访问模式的转变。
-
-该信息的采样方式与 LRU 的采样方式类似（如本文档的上一节所述）选择驱逐候选项。
-
-然而，与 LRU 不同的是，LFU 具有某些可调参数：例如，多快 如果一个频繁的项目不再被访问，它是否应该降低等级？还可以调整莫里斯计数器范围，以更好地使算法适应特定用例。
-
-默认情况下，redis 配置为：
-
-使计数器饱和，大约有 100 万个请求。
-每一分钟衰减一次计数器。
-这些值应该是合理的值，并且已经过实验测试，但用户可能希望使用这些配置设置来选择最佳值。
-
-有关如何调整这些参数的说明，请参阅源代码分发的示例文件。简而言之，它们是：redis.conf
-
-lfu-log-factor 10
-lfu-decay-time 1
-衰减时间是显而易见的，它是计数器在采样并发现比该值更旧时应该衰减的分钟数。一个特殊的价值意味着：我们永远不会衰减计数器。0
-
-计数器对数因子更改使频率计数器饱和所需的命中次数，该计数器正好在 0-255 范围内。系数越高，达到最大值所需的访问次数就越多。根据下表，系数越低，低访问计数器的分辨率越好：
-
+* 在 LFU 模式下，redis 将尝试跟踪 key 访问的频率，很少使用的 key 被淘汰，经常使用的 key 通常有更大的概率保留在内存中；
+* LFU 类似于 LRU，它使用一个概率计数器来估计对象访问频率，每个对象仅使用几个位，并结合衰减周期，以便计数器随时间推移而减少；
+* LFU 同样具有某些可调参数，可以调整频率阈值与计数器范围；
 
