--- a/docs/02.后端技术/02.Redis/12.持久化.md
+++ b/docs/02.后端技术/02.Redis/12.持久化.md
@@ -18,4 +18,31 @@ author:
 
 ## 三、RDB方式
 
+* 将当前内存中数据生成快照保存在硬盘上，可以手动触发和自动触发；
+* 手动触发：
+ * save命令：阻塞当前Redis服务，直到RDB过程完成为止，内存使用较多时会造成长时间阻塞，线上环境不建议使用；
+ * bgsave命令：Redis进程执行fork操作创建子进程，子进程负责RDB持久化过程，完成后自动结束，阻塞只发生在fork阶段，一般时间很短；
+* 自动触发：
+ * 使用save相关配置，如“save m n”，表示m秒内数据集存在n次修改时，自动触发bgsave；
+ * 如果从节点执行全量复制操作，主节点自动执行bgsave生成RDB文件并发送给从节点；
+ * 默认情况下执行shutdown命令时，如果没有开启AOF持久化功能则自动执行bgsave；
+* Redis默认采用LZF算法对生成的RDB文件做压缩处理，压缩后的文件远远小于内存大小，默认开启，可以通过参数config set rdbcompression{yes|no}动态修改；
+* 优点：是一个紧凑压缩的二进制文件，redis加载RDB文件恢复数据远远快于AOF，非常适合备份、全量复制等场景；
+* 缺点：没法做到实时持久化，频繁执行RDB备份成本较高，可能会丢失最后一次备份之后的数据；
+
+
 ## 四、AOF方式
+
+* 以独立日志的方式记录每次写命令，重启时再重新执行AOF文件中的命令达到恢复数据的目的；
+* AOF的主要作用是解决了数据持久化的实时性，目前已经是Redis持久化的主流方式，默认是不开启的；
+### 工作流程
+ * append：所有的写入命令会先追加到aof_buf缓冲区中，避免直接写磁盘有性能瓶颈；
+ * sync：aof_buf缓冲区根据对应的策略向硬盘做同步操作，将缓冲区的命令同步到磁盘；
+ * rewrite：随着AOF文件越来越大，需要定期对AOF文件进行重写，达到压缩的目的；
+ * load：当Redis服务器重启时，可以加载AOF文件进行数据恢复；
+### 同步策略
+ * Always：每个写命令都要同步到磁盘，即使是一条写命令也会执行同步操作；这种策略可以确保数据的完整性和持久性，但会导致频繁的磁盘写入，影响性能；
+ * Everysec：默认的 AOF 同步策略，Redis 每秒钟执行一次同步操作，将缓冲区中的写命令同步到磁盘；这种策略可以在一定程度上保证数据的完整性，同时减少了磁盘写入的频率，对性能影响较小；因为存在追加阻塞的问题，最多会丢失 2 秒钟的数据；
+ * No：Redis 不主动进行 AOF 的同步操作，完全依赖操作系统进行异步写入；这种策略可能导致系统崩溃时数据丢失，不推荐在生产环境中使用；
+### 重写机制
+* 
