update redis duratility

--- a/docs/02.后端技术/02.Redis/12.持久化.md
+++ b/docs/02.后端技术/02.Redis/12.持久化.md
@@ -38,11 +38,12 @@ author:
 ### 工作流程
  * append：所有的写入命令会先追加到aof_buf缓冲区中，避免直接写磁盘有性能瓶颈；
  * sync：aof_buf缓冲区根据对应的策略向硬盘做同步操作，将缓冲区的命令同步到磁盘；
- * rewrite：随着AOF文件越来越大，需要定期对AOF文件进行重写，达到压缩的目的；
+ * rewrite：随着AOF文件越来越大，需要把Redis进程内的数据转化为写命令同步到新的AOF文件，达到压缩的目的；
  * load：当Redis服务器重启时，可以加载AOF文件进行数据恢复；
 ### 同步策略
  * Always：每个写命令都要同步到磁盘，即使是一条写命令也会执行同步操作；这种策略可以确保数据的完整性和持久性，但会导致频繁的磁盘写入，影响性能；
  * Everysec：默认的 AOF 同步策略，Redis 每秒钟执行一次同步操作，将缓冲区中的写命令同步到磁盘；这种策略可以在一定程度上保证数据的完整性，同时减少了磁盘写入的频率，对性能影响较小；因为存在追加阻塞的问题，最多会丢失 2 秒钟的数据；
  * No：Redis 不主动进行 AOF 的同步操作，完全依赖操作系统进行异步写入；这种策略可能导致系统崩溃时数据丢失，不推荐在生产环境中使用；
 ### 重写机制
-* 
+* redis进程中有已经过期的数据、AOF文件中有无效的命令（先set再delete）、有可以合并的多个命令，所以AOF文件重写后，体积会更小，能够更快被 redis 加载；
+* AOF文件重写能够被手动触发或自动触发，直接调用bgrewriteaof命令触发重写，或是根据auto-aof-rewrite-min-size和auto-aof-rewrite-percentage参数自动触发（文件体积和两次触发的体积比）；
