update redis durability

--- a/docs/02.后端技术/02.Redis/11.key过期策略.md
+++ b/docs/02.后端技术/02.Redis/11.key过期策略.md
@@ -1,5 +1,5 @@
 ---
-title: redis key 过期策略
+title: Redis key 过期策略
 date: 2024-02-18 14:59:33
 permalink: /pages/f3f589/
 categories:
@@ -12,7 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 
-redis 是键值对类型的数据库，可以设置 key 的过期时间，当 redis 中缓存的 key 过期时可以通过不同的过期策略处理过期的 key，过期策略通常有以下三种，**redis 中同时使用了惰性过期和定期过期两种过期策略**；
+Redis 是键值对类型的数据库，可以设置 key 的过期时间，当 Redis 中缓存的 key 过期时可以通过不同的过期策略处理过期的 key，过期策略通常有以下三种，**Redis 中同时使用了惰性过期和定期过期两种过期策略**；
 
 ### 定时过期
 * 每个设置过期时间的 key 都需要创建一个定时器，到过期时间就会立即清除，该策略可以立即清除过期的数据，**对内存很友好，但是会占用大量的CPU资源去处理过期的数据**，从而影响缓存的响应时间和吞吐量；
@@ -23,5 +23,5 @@ redis 是键值对类型的数据库，可以设置 key 的过期时间，当 re
 
 ### 定期过期
 * 每隔一定的时间，会扫描一定数量的数据库的 expires 字典中一定数量的 key，并清除其中已过期的 key，该策略是前两者的一个折中方案，通过调整定时扫描的时间间隔和每次扫描的限定耗时，**可以在不同情况下使得CPU和内存资源达到最优的平衡效果**；
-* expires 字典会保存 redis 中所有设置了过期时间的 key 的过期时间数据，该字典的 key 是指向键空间中的某个键的指针，value 是该键的毫秒精度的 UNIX 时间戳表示的过期时间，键空间是指该 redis 集群中保存的所有键；
+* expires 字典会保存 Redis 中所有设置了过期时间的 key 的过期时间数据，该字典的 key 是指向键空间中的某个键的指针，value 是该键的毫秒精度的 UNIX 时间戳表示的过期时间，键空间是指该 Redis 集群中保存的所有键；
 
