--- a/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
+++ b/docs/02.后端技术/02.Redis/10.内存淘汰策略.md
@@ -1,10 +1,10 @@
 ---
-title: redis 内存淘汰策略
+title: Redis 内存淘汰策略
 date: 2024-02-01 16:14:03
 permalink: /pages/c6674a/
 categories:
   - 后端技术
-  - redis
+  - Redis
 tags:
   - 
 author: 
@@ -12,7 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 
-redis 的内存淘汰策略是指<span style="color: red;">**在 redis 用于缓存的内存不足时，如何处理需要申请额外空间的数据**</span>；redis的内存淘汰策略的选取并不会影响过期的key的处理，过期策略用于处理过期的缓存数据；
+Redis 的内存淘汰策略是指<span style="color: red;">**在 Redis 用于缓存的内存不足时，如何处理需要申请额外空间的数据**</span>；Redis的内存淘汰策略的选取并不会影响过期的key的处理，过期策略用于处理过期的缓存数据；
 
 ### 常见的内存淘汰策略
 
@@ -37,11 +37,11 @@ redis 的内存淘汰策略是指<span style="color: red;">**在 redis 用于缓
 * 如果在创建 key 时设置了过期时间，但是访问频率很低，可以使用 volatile-lfu 策略；
 
 ### 近似 LRU 算法
-* redis LRU 算法采从一池子的候选人中进行淘汰，提高了算法的性能，能够更接近真实 LRU 算法的行为，可以通过更改每次要检查的淘汰样本数来调整算法的精度；
-* redis LRU 算法是一种近似的 LRU 的算法，因为真正的 LRU 算法会消耗更多的内存；
+* Redis LRU 算法采从一池子的候选人中进行淘汰，提高了算法的性能，能够更接近真实 LRU 算法的行为，可以通过更改每次要检查的淘汰样本数来调整算法的精度；
+* Redis LRU 算法是一种近似的 LRU 的算法，因为真正的 LRU 算法会消耗更多的内存；
 
 ### 新的 LFU 模式
-* 在 LFU 模式下，redis 将尝试跟踪 key 访问的频率，很少使用的 key 被淘汰，经常使用的 key 通常有更大的概率保留在内存中；
+* 在 LFU 模式下，Redis 将尝试跟踪 key 访问的频率，很少使用的 key 被淘汰，经常使用的 key 通常有更大的概率保留在内存中；
 * LFU 类似于 LRU，它使用一个概率计数器来估计对象访问频率，每个对象仅使用几个位，并结合衰减周期，以便计数器随时间推移而减少；
 * LFU 同样具有某些可调参数，可以调整频率阈值与计数器范围；
 
