--- a/docs/02.后端技术/02.Redis/12.持久化.md
+++ b/docs/02.后端技术/02.Redis/12.持久化.md
@@ -13,10 +13,11 @@ author:
 ---
 
 ## 一、基本介绍
+* Redis 数据是存储在内存中的，当 Redis 进程退出或崩溃后，内存中的数据需要持久化到磁盘才能避免数据丢失问题，在下次重启时利用之前持久化的文件即可实现数据恢复；
+* Redis 部署常常是主从模式的，主从之间的全量复制、节点崩溃后的恢复等都需要从持久化的文件中获取数据；
+* Redis 主要的持久化方式是 RDB 和 AOF，即内存快照和命令追加；
 
-## 二、持久化方式
-
-## 三、RDB 方式
+## 二、、RDB 方式
 * 将当前内存中数据生成快照保存在硬盘上，可以手动触发和自动触发；
 * Redis 默认采用LZF算法对生成的 RDB 文件做压缩处理，压缩后的文件远远小于内存大小，默认开启，可以通过参数 `config set rdbcompression{yes|no}` 动态修改；
 
@@ -34,7 +35,7 @@ author:
 * 缺点：无法做到实时持久化，频繁执行RDB备份成本较高，可能会丢失最后一次备份之后的数据；
 
 
-## 四、AOF 方式
+## 三、AOF 方式
 * 以独立日志的方式记录每次写命令，重启时再重新执行 AOF 文件中的命令达到恢复数据的目的；
 * AOF 的主要作用是解决了数据持久化的实时性，目前已经是 Redis 持久化的主流方式，默认是不开启的；
 
