--- a/docs/02.后端技术/02.Redis/13.缓存优化.md
+++ b/docs/02.后端技术/02.Redis/13.缓存优化.md
@@ -12,10 +12,23 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 一、穿透优化
+## 一、基本介绍
+* Redis 作为内存型 key-value 数据库，常常可以用作其他数据库或服务的缓存，能够有效地加速应用的读写速度，同时也可以降低后端负载，但同时也需要解决数据一致性、代码维护等问题；
+* 缓存中的数据通常都是有生命周期的，需要在指定时间后被删除或更新，这样可以保证缓存空间在一个可控的范围，同时也需要通过一些策略对数据进行更新保证数据的一致性，常用的更新策略有：.LRU/LFU/FIFO算法剔除、超时剔除、主动更新等；
 
-## 二、无底洞优化
+## 二、穿透优化
+### 缓存穿透
+* 缓存穿透是指查询一个根本不存在的数据，缓存层和存储层都不会命中，通常出于容错的考虑，如果从存储层查不到数据则不写入缓存层，将会导致不存在的数据每次请求都要到存储层去查询，失去了缓存保护后端存储的意义；
+* 通常可以在程序中分别统计总调用数、缓存层命中数、存储层命中数，如果发现大量存储层空命中，可能就是出现了缓存穿透问题；
 
-## 三、雪崩优化
+### 可能原因
+* 自身业务代码或者数据出现问题；
+* 一些恶意攻击、爬虫等造成大量空命中；
 
-## 四、热点 key 优化
+### 解决方式
+
+## 三、无底洞优化
+
+## 四、雪崩优化
+
+## 五、热点 key 优化
