--- a/docs/01.语言/01.Go/15.map.md
+++ b/docs/01.语言/01.Go/15.map.md
@@ -1228,3 +1228,182 @@ func mapclear(t *maptype, h *hmap) {
 * mapclear 从 map 中删除所有的 key，如果 map 为 nil 或是没有元素，直接返回，有其他 goroutine 正在写，抛出错误；
 * <span style="color: red;">**将等量扩容标志清除、旧桶数组指针置空，这两个只有在清空和扩容完毕时才有此操作**</span>，表示当前 map 没有在扩容中；
 * 将迁移进度归零、溢出桶数量归零、键值对数量归零，以及将存储桶数组的内存清除
+
+### 11，mapiterinit
+::: details
+```go
+func mapiterinit(t *maptype, h *hmap, it *hiter) {
+	// map 为空或是没有元素，直接返回
+	if h == nil || h.count == 0 {
+		return
+	}
+
+	// hiter 结构体内存对齐后应该是 12 个sys.PtrSize 字节大小
+	if unsafe.Sizeof(hiter{})/sys.PtrSize != 12 {
+		throw("hash_iter size incorrect") // see cmd/compile/internal/reflectdata/reflect.go
+	}
+	it.t = t
+	it.h = h
+
+	// 抓取存储桶状态的快照
+	it.B = h.B
+	it.buckets = h.buckets
+	if t.bucket.ptrdata == 0 {
+		// 桶中不含指针时，创建溢出桶数组，并赋值给迭代器
+		h.createOverflow()
+		it.overflow = h.extra.overflow
+		it.oldoverflow = h.extra.oldoverflow
+	}
+
+	// 决定从何处开始迭代
+	r := uintptr(fastrand()) // 创建随机数
+	if h.B > 31-bucketCntBits {
+		r += uintptr(fastrand()) << 31
+	}
+	it.startBucket = r & bucketMask(h.B)          // 确定开始迭代的桶的索引
+	it.offset = uint8(r >> h.B & (bucketCnt - 1)) // 确定桶中开始迭代的索引
+
+	// 迭代器当前遍历的桶
+	it.bucket = it.startBucket
+
+	// 可以与其他迭代器 mapiterinit() 同时运行
+	if old := h.flags; old&(iterator|oldIterator) != iterator|oldIterator {
+		atomic.Or8(&h.flags, iterator|oldIterator)
+	}
+
+	mapiternext(it)
+}
+```
+:::
+* mapiterinit 初始化用于在 map 上迭代的迭代器 hiter 结构；
+* 通过随机数的方式，随机从某个桶的某个元素开始迭代，<span style="color: red;">**迭代器记录了起始桶和起始索引**</span>；
+
+
+### 12，mapiternext
+::: details
+```go
+func mapiternext(it *hiter) {
+	h := it.h
+	// 有其他 goroutine 正在写，抛出错误
+	if h.flags&hashWriting != 0 {
+		throw("concurrent map iteration and map write")
+	}
+	t := it.t
+	bucket := it.bucket // 当前遍历的溢出桶序号，第一次执行 mapiternext 是迭代器开始遍历的桶序号
+	b := it.bptr        // 当前桶地址，未赋值默认为空
+	i := it.i
+	checkBucket := it.checkBucket
+
+next:
+	if b == nil {
+		// b 为 nil，表示第一个要遍历的桶
+		if bucket == it.startBucket && it.wrapped {
+			// bucket 等于遍历的起始桶序号，并且已经绕了一圈了，说明其他桶都已经遍历过了，直接退出
+			it.key = nil
+			it.elem = nil
+			return
+		}
+		if h.growing() && it.B == h.B {
+			// 迭代器是在扩容过程中启动的，扩容尚未完成
+			// bucket 是新存储桶数组中的索引，oldbucket 是 bucket 对应在旧存储桶数组中的索引，bucket 与旧存储桶数量的掩码值与运算能够得到 oldbucket
+			// 扩容过程中他们是对应的，eg：bucket 为 6，B 为 3，2^B=8；如果是等量扩容，old B 也为 3，oldbucket 也为 6，即等量扩容时旧 6 号桶迁移到新 6 号桶；
+			// 如果是翻倍扩容，old B 为 2，2^B=4, oldbucket = 6%4 = 2，2+4=6，即旧 2 号桶迁移到新 2 或 6 号桶，新 6 号桶中的数据只能来自旧 2 号桶；
+			oldbucket := bucket & it.h.oldbucketmask()
+			// 获取 oldbucket 对应的旧存储桶
+			b = (*bmap)(add(h.oldbuckets, oldbucket*uintptr(t.bucketsize)))
+			if !evacuated(b) {
+				// 旧桶 b 未迁移走，要遍历的对象 b 为旧桶，记录该旧桶如果迁移时对应的新存储桶索引
+				checkBucket = bucket
+			} else {
+				// 旧桶 b 已经迁移到新桶了，要遍历的对象 b 为新桶，获取 bucket 对应的新存储桶
+				// 如果查看的存储桶尚未填充（即旧存储桶尚未撤离），那么我们需要遍历旧存储桶，并且仅返回将迁移到此存储桶的存储桶。
+				b = (*bmap)(add(it.buckets, bucket*uintptr(t.bucketsize)))
+				checkBucket = noCheck
+			}
+		} else {
+			// 获取对应 bucket 的新存储桶
+			b = (*bmap)(add(it.buckets, bucket*uintptr(t.bucketsize)))
+			checkBucket = noCheck
+		}
+		bucket++ // 桶索引号自增
+		if bucket == bucketShift(it.B) {
+			bucket = 0        // 已经到了最后一个桶了，重置为 0 从头开始
+			it.wrapped = true // 置 wrapped 为 true，表示已经饶了一圈
+		}
+		i = 0
+	}
+	// 以上确定了要遍历的桶 b
+	// i 遍历的元素个数，从 0 到 bucketCnt-1
+	for ; i < bucketCnt; i++ {
+		// 依次遍历桶内每个单元格
+		offi := (i + it.offset) & (bucketCnt - 1) // 桶内单元格的偏移量
+		if isEmpty(b.tophash[offi]) || b.tophash[offi] == evacuatedEmpty {
+			// 如果单元格为空或是数据已经迁移走了，跳过
+			// TODO: emptyRest 在这里很难使用，因为是在存储桶中间开始迭代。是可行的，只是很棘手。
+			continue
+		}
+		// 获取 key 的地址
+		k := add(unsafe.Pointer(b), dataOffset+uintptr(offi)*uintptr(t.keysize))
+		if t.indirectkey() {
+			k = *((*unsafe.Pointer)(k))
+		}
+		// 获取 elem 的地址
+		e := add(unsafe.Pointer(b), dataOffset+bucketCnt*uintptr(t.keysize)+uintptr(offi)*uintptr(t.elemsize))
+		if checkBucket != noCheck && !h.sameSizeGrow() {
+			// checkBucket 是当前要遍历的新桶索引号，其所有数据来自旧桶 b，如果该旧桶 b 还未进行迁移
+			// 并且 map 正在进行翻倍扩容，那么实际应该遍历的数据是旧桶 b 中将要迁移到索引号 checkBucket 对应的新桶的那部分键值对
+			// 因为在翻倍扩容过程中，旧桶 b 中的数据会同时迁往两个不同的新桶，所以在对某个新桶进行遍历时，
+			// 如果该新桶中的数据还没有迁移过来，那么只需要遍历该新桶对应的旧桶中将要迁移到这个新桶的那部分数据
+			if t.reflexivekey() || t.key.equal(k, k) {
+				// 如果 key 是相等的，计算 key 哈希值，并判断其是否会迁移到 checkBucket 对应的新桶，否则过滤
+				hash := t.hasher(k, uintptr(h.hash0))
+				if hash&bucketMask(it.B) != checkBucket {
+					continue
+				}
+			} else {
+				// key 是 math.NaN()，每次计算出来的哈希值不一样，与 evacuate 中的迁移逻辑一样，让低位的 tophash 来决定迁移目的桶
+				// 对于翻倍扩容，使用 x 还是 y，取决于 key 的哈希值第 B 位是 0 还是 1，从右到左第 0 位开始
+				// useY = uintptr(b.tophash[offi]&1) 表示是否搬到 y 桶
+				// checkBucket>>(it.B-1) 表示该桶是否是 y 桶，对于具体的桶，该值是一样的，useY 是随 key 变化的
+				if checkBucket>>(it.B-1) != uintptr(b.tophash[offi]&1) {
+					continue
+				}
+			}
+		}
+		if (b.tophash[offi] != evacuatedX && b.tophash[offi] != evacuatedY) ||
+			!(t.reflexivekey() || t.key.equal(k, k)) {
+			// 如果数据还没有被迁移，或是因此 key!=key 该条目无法被删除或更新，可以将其返回？
+			it.key = k
+			if t.indirectelem() {
+				e = *((*unsafe.Pointer)(e))
+			}
+			it.elem = e
+		} else {
+			// 如果该 key 已经迁移到 x 或是 y 桶，并且 key 是相等的
+			// key 可能已经被删除、更新或删除并重新插入
+			rk, re := mapaccessK(t, h, k)
+			if rk == nil {
+				continue // key has been deleted
+			}
+			it.key = rk
+			it.elem = re
+		}
+		it.bucket = bucket // 记录当前遍历的桶的序号，以便下次遍历
+		if it.bptr != b {  // 避免不必要的写屏障，see issue 14921
+			it.bptr = b
+		}
+		it.i = i + 1
+		it.checkBucket = checkBucket
+		return // 获取到 key、value，返回，等待下一次 mapiternext 再继续遍历
+	}
+	b = b.overflow(t) // 当前桶已经遍历完，遍历其溢出桶
+	i = 0
+	goto next
+}
+```
+:::
+* 如果在迭代过程中，有其他的 goroutine 正在对map进行写，就会直接抛出错误；
+* 通过迭代器的方式遍历map，因为是随机从某个桶开始的，所以要记录起始桶的位置以及是否遍历完了最后一个桶并饶了一圈，即由于数据存储桶是一个数组，当从数组中间开始遍历时需要记录数组位置以及是否遍历到了最后一个元素并回到了数组开头；
+* <span style="color: red;">**当再次遍历到起始桶的位置，并且已经饶了一圈时，说明所有的桶都已经遍历完毕，直接返回**</span>；
+* 当map是在扩容过程中，并且扩容还没有完成，需要判断当前桶是否已经迁移完成了，以决定是遍历新桶还是旧桶；
+* 迭代器遍历每个桶的每个元素，获取到元素时，<span style="color: red;">**记录当前遍历的桶地址以及下一次需要遍历该桶的所以，以便下一次继续遍历**</span>，然后返回；
