--- a/docs/01.语言/01.Go/16.range.md
+++ b/docs/01.语言/01.Go/16.range.md
@@ -32,7 +32,7 @@ for hv1 := 0; hv1 < len(ha); {
   // original body
 }
 ```
-* 先对字符串 a 进行浅拷贝，获取长度后字符对其字符进行遍历；
+* **先对字符串 a 进行浅拷贝，获取长度后字符对其字符进行遍历**；
 
 ## 三、array or slice
 * 对于`for v1, v2 := range a`数组或切片的遍历，会被转换为以下形式：
@@ -48,9 +48,9 @@ for ; hv1 < hn; hv1++ {
     ...
 }
 ```
-* 先对切片 a 进行浅拷贝，获取长度后对齐进行遍历，ha 是原切片 a 的副本，在遍历前就已经确定了 a 的元素和长度；
-* 在遍历期间，v2 每次遍历都是对原元素的一次拷贝，如果元素是一个很大的结构体或字符串，可能会有性能问题；
-* 如果在遍历期间如果 a 的长度发生改变或是发生扩容，不影响遍历的结果；如果是在遍历过程中，修改了切片 a 自身的元素，会影响遍历结果；
+* <span style="color: red;">**先对切片 a 进行浅拷贝，获取长度后对齐进行遍历，ha 是原切片 a 的副本，在遍历前就已经确定了 a 的元素和长度**</span>；
+* <span style="color: red;">**在遍历期间，v2 每次遍历都是对原元素的一次拷贝，如果元素是一个很大的结构体或字符串，可能会有性能问题**</span>；
+* <span style="color: red;">**如果在遍历期间如果 a 的长度发生改变或是发生扩容，不影响遍历的结果；如果是在遍历过程中，修改了切片 a 自身的元素，会影响遍历结果**</span>；
 
 ## 四、map 
 * 对于`for v1, v2 = range a`哈希表的遍历，会转换为以下形式：
@@ -80,3 +80,7 @@ for ; hb != false; hv1, hb = <-ha {
     ...
 }
 ```
+* 如果管道中没有值，或为 nil，那么`hv1, hb = <-ha`操作将会被阻塞；
+* 如果管道中有值，那么 hb 为 true， hv1 为实际读出来的值；
+* <span style="color: red;">**如果管道已经关闭了，那么 hb 为 false， hv1 为类型零值**</span>；
+* 详细内容可以见[go 并发之 chan](https://erlangtui.top/pages/f0e212/#_5-chanrecv)；
