--- a/docs/02.后端技术/04.Kafka/00.Kafka的基本介绍.md
+++ b/docs/02.后端技术/04.Kafka/00.Kafka的基本介绍.md
@@ -11,7 +11,7 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-Kafka史上最详细原理总结分为上下两部分，承上启下
+<!-- Kafka史上最详细原理总结分为上下两部分，承上启下
 --------------------------
 
 [Kafka史上最详细原理总结上](https://www.jianshu.com/p/734cf729d77b)
@@ -465,22 +465,4 @@ image
 
 segment index file采取稀疏索引存储方式，它减少索引文件大小，通过mmap可以直接内存操作，稀疏索引为数据文件的每个对应message设置一个元数据指针,它 比稠密索引节省了更多的存储空间，但查找起来需要消耗更多的时间。
 
-kafka会记录offset到zk中。但是，zk client api对zk的频繁写入是一个低效的操作。0.8.2 kafka引入了native offset storage，将offset管理从zk移出，并且可以做到水平扩展。其原理就是利用了kafka的compacted topic，offset以consumer group,topic与partion的组合作为key直接提交到compacted topic中。同时Kafka又在内存中维护了的三元组来维护最新的offset信息，consumer来取最新offset信息的时候直接内存里拿即可。当然，kafka允许你快速的checkpoint最新的offset信息到磁盘上。
-
-[Kafka史上最详细原理总结下](https://www.jianshu.com/p/acf010e67a19)
-=========================================================
-
-本篇为[Kafka史上最详细原理总结上](https://www.jianshu.com/p/734cf729d77b)，承接[Kafka史上最详细原理总结下](https://www.jianshu.com/p/acf010e67a19)
-
-原文出处：
------
-
-[Kafka史上最详细原理总结](https://blog.csdn.net/u013573133/article/details/48142677)
-===========================================================================
-
-[Kafka史上最详细原理总结](https://blog.csdn.net/YChenFeng/article/details/74980531)
-==========================================================================
-
-  
-
-本文转自 [https://www.jianshu.com/p/734cf729d77b](https://www.jianshu.com/p/734cf729d77b)，如有侵权，请联系删除。
+kafka会记录offset到zk中。但是，zk client api对zk的频繁写入是一个低效的操作。0.8.2 kafka引入了native offset storage，将offset管理从zk移出，并且可以做到水平扩展。其原理就是利用了kafka的compacted topic，offset以consumer group,topic与partion的组合作为key直接提交到compacted topic中。同时Kafka又在内存中维护了的三元组来维护最新的offset信息，consumer来取最新offset信息的时候直接内存里拿即可。当然，kafka允许你快速的checkpoint最新的offset信息到磁盘上。 -->
