--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -85,7 +85,7 @@ author:
 * 切片，用于存储一组同类型数据；
 * 底层主要是长度、容量、指向数组的指针组成，当触发扩容时，该指针的值会发生变化；
 
-### 2，数组
+### 2，array
 * 固定容量的切片，或是根据存储的数据长度自动推导容量大小；
 * 没有 append 函数，不会触发扩容；
 * 只能通过索引访问、修改、添加元素；
