--- a/docs/01.语言/01.Go/26.普通方法与接口方法.md
+++ b/docs/01.语言/01.Go/26.普通方法与接口方法.md
@@ -15,6 +15,7 @@ author:
 ## 一，基本介绍
 - 方法能给用户自定义的类型添加新的行为，它和函数的区别在于方法有一个接收者，<span style="color: red;">**可以理解为方法是被指定了一个固定参数的函数**</span>；
 - 这个参数通常叫做接收者，接受者的类型可以是值类型，也可以是指针类型，就像是函数的参数类型一样；
+- 自定义类型大部分都为结构体类型，后续全部以结构体类型举例；
 
 ## 二、接收者的类型
 - 方法的接收者可以是值类型接收者，也可以是指针类型的接收者，无论接受者是什么类型的方法，<span style="color: red;">**调用方法的时候，都是通过值拷贝的方式将该类型的变量值传递给方法的接受者**</span>，与函数的传参是一样的原理，接受者都是原变量的拷贝；
@@ -116,7 +117,7 @@ func main() {
 :::
 
 ### 2，指针类型接受者
-* <span style="color: red;">**接受者是指针类型时，无论调用方是值类型还是指针类型，在方法内对元素的更新都将影响到调用方**</span>，示例如下；
+* <span style="color: red;">**接受者是指针类型时，无论调用方是值类型还是指针类型，在方法内对接收者元素的更新都将影响到调用方**</span>，示例如下；
 * 当是值类型的调用方时，**实际传递的是调用方的引用**；当是指针类型的调用方时，实际传递的是调用方自己，形参还是一个指针；
 
 ::: details
@@ -212,11 +213,52 @@ func main() {
 
 
 ## 四、实现接口的方法
-- 当实现了一个接收者是值类型的方法，可以自动生成一个接收者是对应指针类型的方法，因为两者都不会影响接收者；
-- 当实现了一个接收者是指针类型的方法，如果此时自动生成一个接收者是值类型的方法，原本期望对接收者的改变（通过指针实现），现在无法实现，因为**值类型会产生一个拷贝，不会真正影响调用者；**
-- **如果实现了接收者是值类型的方法，会隐含地也实现了接收者是指针类型的方法；**
+- 当实现了一个接收者是值类型的方法，**可以自动生成一个接收者是对应指针类型的方法**，因为两者都不会影响接收者；
 - **指针变量副本**与原来的指针指向一个**相同并且唯一的结构体**，所以编译器可以**隐式的对变量解引用**获取指针指向的结构体；
+- 以下代码能够正常编译和运行：
+::: details
+```go
+package main
+
+type user interface {
+	get() string
+	set(s string)
+}
+
+type gopher struct {
+	name string
+}
+
+func (g gopher) get() string {
+	return g.name
+}
+
+func (g gopher) set(s string) {
+	g.name = s
+}
+
+func f1() {
+	var c user = &gopher{"go1"}
+	c.get()
+	c.set("f1")
+}
+
+func f2() {
+	var c user = gopher{"go2"}
+	c.get()
+	c.set("f2")
+}
+
+func main() {
+	f1()
+	f2()
+}
+```
+:::
+
+- 当实现了一个接收者是指针类型的方法，如果此时自动生成一个接收者是值类型的方法，原本期望对接收者的更新（通过指针实现）将无法实现，因为**值类型会产生一个拷贝，不会真正影响调用者**；
 - 如果实现了接收者是指针类型的方法，当传入一个结构体值时，**这个结构体是原始结构体的副本**，**即使能够生成一个结构体指针，也是指向副本的指针**，无法对原始结构体产生改变；
+- 以下代码就编译出错：
 ::: details
 ```go
 package main
@@ -272,32 +314,27 @@ func main() {
 - 实现了接收者是**指针类型**的方法，不会自动生成对应接收者是值类型的方法；
 :::
 
-| - | 结构体实现接口 | 结构体指针实现接口 |
-| --- | --- | --- |
-| 结构体初始化变量 | 通过 | 不通过 |
-| 结构体指针初始化变量 | 通过 | 通过 |
-
-
 
 ## 五、两者的区别
-
 - 普通方法：
+   - 普通方法是针对特定类型定义的方法，可以在类型实例上直接调用这些方法；
    - **接收者是指针类型的方法，也能接受调用者是值类型的调用**，使用了调用者值的引用来调用方法；
 - 接口方法：
-   - **接收者是指针类型的方法，无法接受调用者是值类型的调用**，默认没有实现值类型的方法，因为值类型的方法修改的是调用者的副本，无法对原始调用者进行修改；
-## 六、使用场景
+   - 接口方法是一种协议，在接口中定义了方法签名，但没有具体的实现，具体实现由类型自身完成；
+   - 对于接口方法，**需要先将实例赋值给接口类型的变量，然后通过接口变量来调用方法**；
+   - 如果一个类型实现了接口中定义的所有方法，那么该类型就实现了这个接口，**实现接口的类型可以被赋值给接口类型的变量，从而实现了多态性**；
+   - **接收者是指针类型的接口方法，无法接受调用者是值类型的调用**，默认没有实现值类型的方法，因为值类型的方法修改的是调用者的副本，无法对原始调用者进行修改；
 
+## 六、使用场景
 - 如果方法的接收者是值类型，无论调用者是对象还是对象指针，**修改的都是对象的副本**，不影响调用者；
 - 如果方法的接收者是指针类型，则调用者修改的是**指针指向的对象本身**；
 - 使用指针作为方法的接收者的理由：
-- 方法能够修改接收者指向的值；
-- 避免在每次调用方法时复制该值，在值的类型为大型结构体时，这样做会更加高效；
+ - 方法能够修改接收者指向的值；
+ - 避免在每次调用方法时复制该值，在值的类型为大型结构体时，这样做会更加高效；
 
 ## 七、检测接口的实现
-
 - 使用结构体时并不关心它实现了哪些接口，Go 语言只会在**传递参数、返回参数以及变量赋值**时才会对某个类型是否实现接口进行检查；
-- 编译器能够检测接口的方法是否已经实现；
-- 赋值语句会发生隐式地类型转换，在转换的过程中，编译器会检测等号右边的类型是否实现了等号左边接口所规定的函数；
+- 编译器能够检测接口的方法是否已经实现，赋值语句会发生隐式地类型转换，在转换的过程中，编译器会检测等号右边的类型是否实现了等号左边接口所规定的函数；
 ```go
 package main
 
@@ -306,10 +343,9 @@ import "io"
 type myWriter struct {
 
 }
-
-/*func (w myWriter) Write(p []byte) (n int, err error) {
-	return
-}*/
+// func (w *myWriter) Write(p []byte) (n int, err error) {
+// 	return
+// }
 
 func main() {
     // 检查 *myWriter 类型是否实现了 io.Writer 接口
