--- a/docs/02.后端技术/06.Hive/01.Hive常用的命令.md
+++ b/docs/02.后端技术/06.Hive/01.Hive常用的命令.md
@@ -1,5 +1,5 @@
 ---
-title: Hive常用的命令
+title: Hive 常用的命令
 date: 2024-04-02 14:33:45
 permalink: /pages/b8ce7e/
 categories:
@@ -41,4 +41,5 @@ author:
 	- rank()：当分组内会出现同一个排名，但是排名次序是不连续的
 	- dense_rank()：分组内可能会出现同样的次序，且排序名次是连续的
 
-
+- 分位值
+    - `select percentile(cast(duration as int), 0.99) as per`
