--- a/docs/01.语言/02.C++/05.多态.md
+++ b/docs/01.语言/02.C++/05.多态.md
@@ -1,5 +1,5 @@
 ---
-title: C++多态
+title: C++ 多态
 date: 2023-08-22 21:25:27
 permalink: /pages/7ff72e/
 categories:
@@ -10,6 +10,13 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 一、静态联编与动态联编
+将源代码中的函数调用解释为执行特定的函数代码块被称为函数名联编（binding）。
+在C语言中，这非常简单，因为每个函数名都对应一个不同的函数。在C++中，由于函数重载的缘故，这项任务更复杂。编译器必须查看函数参数以及函数名才能确定使用哪个函数。
+C/C++编译器可以在编译过程完成这种联编。在编译过程中进行联编被称为静态联编（static binding），又称为早期联编（earlybinding）。
+虚函数使这项工作变得更困难，使用哪一个函数不能在编译时确定的，因为编译器不知道用户将选择哪种类型的对象。
+编译器必须生成能够在程序运行时选择正确的虚方法的代码，这被称为动态联编（dynamicbinding），又称为晚期联编（late binding）。
 
 ## 一、虚函数
 * C++中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数；
