--- a/docs/01.语言/02.C++/05.多态.md
+++ b/docs/01.语言/02.C++/05.多态.md
@@ -11,15 +11,9 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 一、静态联编与动态联编
-将源代码中的函数调用解释为执行特定的函数代码块被称为函数名联编（binding）。
-在C语言中，这非常简单，因为每个函数名都对应一个不同的函数。在C++中，由于函数重载的缘故，这项任务更复杂。编译器必须查看函数参数以及函数名才能确定使用哪个函数。
-C/C++编译器可以在编译过程完成这种联编。在编译过程中进行联编被称为静态联编（static binding），又称为早期联编（earlybinding）。
-虚函数使这项工作变得更困难，使用哪一个函数不能在编译时确定的，因为编译器不知道用户将选择哪种类型的对象。
-编译器必须生成能够在程序运行时选择正确的虚方法的代码，这被称为动态联编（dynamicbinding），又称为晚期联编（late binding）。
-
 ## 一、虚函数
-* C++中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数；
+* 类继承能够从已有的类派生出新的类，而派生类继承了原有类（称为基类）的特征，包括方法；
+* C++ 中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数；
 * 基类指针或引用调用派生类对象时，在运行时，根据其实际指向的对象，调用该类重写的成员函数；
 * 其动态调用是通过虚函数表来实现的，实现于运行阶段；
 * 一般通过`virtual`关键字来声明某个成员函数为虚函数；
@@ -159,7 +153,6 @@ Animal deconstruct
 * 虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数；
 * 以上述虚函数举例：
   * animal1 实际指向的是 `Dog` 类的对象，那么会通过该对象的虚表指针找到其类的虚函数表，并调用其重载的虚函数；
-  * 
 
 <!-- 
 ```cpp
