--- a/docs/01.语言/01.Go/26.普通方法与接口方法.md
+++ b/docs/01.语言/01.Go/26.普通方法与接口方法.md
@@ -14,19 +14,19 @@ author:
 
 ## 一，基本介绍
 - 方法能给用户自定义的类型添加新的行为，它和函数的区别在于方法有一个接收者，<span style="color: red;">**可以理解为方法是被指定了一个固定参数的函数**</span>；
-- 这个参数通常叫做接收者，接受者的类型可以是值类型，也可以是指针类型，就像是函数的参数类型一样；
+- 这个参数通常叫做接收者，接收者的类型可以是值类型，也可以是指针类型，就像是函数的参数类型一样；
 - 自定义类型大部分都为结构体类型，后续全部以结构体类型举例；
 
 ## 二、接收者的类型
-- 方法的接收者可以是值类型接收者，也可以是指针类型的接收者，无论接受者是什么类型的方法，<span style="color: red;">**调用方法的时候，都是通过值拷贝的方式将该类型的变量值传递给方法的接受者**</span>，与函数的传参是一样的原理，接受者都是原变量的拷贝；
-- **接受者是指针类型的方法时，在方法内改变接受者的元素可以影响到原变量**，因为接受者和原变量都是指针，指向相同的地址；
-- **接受者是值类型的方法时，在方法内修改接受者的元素不会影响原变量**，因为修改的是原变量的副本；
+- 方法的接收者可以是值类型接收者，也可以是指针类型的接收者，无论接收者是什么类型的方法，<span style="color: red;">**调用方法的时候，都是通过值拷贝的方式将该类型的变量值传递给方法的接收者**</span>，与函数的传参是一样的原理，接收者都是原变量的拷贝；
+- **接收者是指针类型的方法时，在方法内改变接收者的元素可以影响到原变量**，因为接收者和原变量都是指针，指向相同的地址；
+- **接收者是值类型的方法时，在方法内修改接收者的元素不会影响原变量**，因为修改的是原变量的副本；
 - 值类型的变量既可以调用值接收者的方法，也可以调用指针接收者的方法；指针类型的变量既可以调用指针接收者的方法，也可以调用值接收者的方法；
 - 在调用方法的时候，<span style="color: red;">**不管方法的接收者是什么类型，该类型的值和指针都可以调用，不必严格符合接收者的类型**</span>；
 
 ## 三、普通方法
-### 1，值类型接受者
-* <span style="color: red;">**接受者是值类型时，无论调用方是值类型还是指针类型，在方法内对元素的更新都无法影响到调用方**</span>，示例如下；
+### 1，值类型接收者
+* <span style="color: red;">**接收者是值类型时，无论调用方是值类型还是指针类型，在方法内对元素的更新都无法影响到调用方**</span>，示例如下；
 * 当是值类型的调用方时，实际传递的是调用方自己，形参是调用方的副本；当是指针类型的调用方时，**实际会对指针解引用，获取其指向的值**，然后传递该值；
 ::: details
 ```go
@@ -116,8 +116,8 @@ func main() {
 ```
 :::
 
-### 2，指针类型接受者
-* <span style="color: red;">**接受者是指针类型时，无论调用方是值类型还是指针类型，在方法内对接收者元素的更新都将影响到调用方**</span>，示例如下；
+### 2，指针类型接收者
+* <span style="color: red;">**接收者是指针类型时，无论调用方是值类型还是指针类型，在方法内对接收者元素的更新都将影响到调用方**</span>，示例如下；
 * 当是值类型的调用方时，**实际传递的是调用方的引用**；当是指针类型的调用方时，实际传递的是调用方自己，形参还是一个指针；
 
 ::: details
@@ -318,19 +318,30 @@ func main() {
 ## 五、两者的区别
 - 普通方法：
    - 普通方法是针对特定类型定义的方法，可以在类型实例上直接调用这些方法；
-   - **接收者是指针类型的方法，也能接受调用者是值类型的调用**，使用了调用者值的引用来调用方法；
+   - **接收者是指针类型的方法，也能接收调用者是值类型的调用**，使用了调用者值的引用来调用方法；
 - 接口方法：
    - 接口方法是一种协议，在接口中定义了方法签名，但没有具体的实现，具体实现由类型自身完成；
    - 对于接口方法，**需要先将实例赋值给接口类型的变量，然后通过接口变量来调用方法**；
    - 如果一个类型实现了接口中定义的所有方法，那么该类型就实现了这个接口，**实现接口的类型可以被赋值给接口类型的变量，从而实现了多态性**；
-   - **接收者是指针类型的接口方法，无法接受调用者是值类型的调用**，默认没有实现值类型的方法，因为值类型的方法修改的是调用者的副本，无法对原始调用者进行修改；
+   - **接收者是指针类型的接口方法，无法接收调用者是值类型的调用**，默认没有实现值类型的方法，因为值类型的方法修改的是调用者的副本，无法对原始调用者进行修改；
 
 ## 六、使用场景
-- 如果方法的接收者是值类型，无论调用者是对象还是对象指针，**修改的都是对象的副本**，不影响调用者；
-- 如果方法的接收者是指针类型，则调用者修改的是**指针指向的对象本身**；
-- 使用指针作为方法的接收者的理由：
- - 方法能够修改接收者指向的值；
- - 避免在每次调用方法时复制该值，在值的类型为大型结构体时，这样做会更加高效；
+### 1，接收者必须是指针
+* 方法需要修改接收者本身；
+* 方法接收者包含了一个不能被复制到成员，如 sync 包的内容；
+
+### 2，接收者应该是指针
+* 当接收者是一个很大的对象时，使用指针能够避免过大复制开销，可以通过基准测试判断；
+* 当接收者的可变部分不是接收者的直接成员，而是成员的子成员，
+
+### 3，接收者必须是值
+* 强制方法的接收者不能被方法更改；
+* 当接收者是 map、func、chan 类型时，需要是值接收者，否则编译错误；
+
+### 4，接收者应该是值
+* 接收者不需要被方法更新时；
+* 接收者是有基础类型构成的小数组或者结构体，并且不饱和可变的成员时；
+* 接收者是想 int、float64、string 这样的基础类型时；
 
 ## 七、检测接口的实现
 - 使用结构体时并不关心它实现了哪些接口，Go 语言只会在**传递参数、返回参数以及变量赋值**时才会对某个类型是否实现接口进行检查；
