--- a/docs/01.语言/01.Go/27.函数选项模式.md
+++ b/docs/01.语言/01.Go/27.函数选项模式.md
@@ -28,8 +28,10 @@ type options struct {
 	dealFun func() error
 }
 
+// 表示更新配置结构体的函数类型
 type Option func(*options) error
 
+// 该函数返回一个闭包，引用其外部的变量，并进行校验
 func WithName(name string) Option {
 	return func(opts *options) error {
 		if name == "" {
@@ -73,10 +75,12 @@ func InitOptions(opts ...Option) error {
 	return nil
 }
 
+func f() error {
+	// do something
+	return nil
+}
+
 func main() {
-	f := func() error {
-		return nil
-	}
 	err := InitOptions(WithName("go"), WithAge(18), WithDealFun(f))
 	if err != nil {
 		fmt.Println(err)
