--- a/docs/01.语言/01.Go/26.普通方法与接口方法.md
+++ b/docs/01.语言/01.Go/26.普通方法与接口方法.md
@@ -324,6 +324,7 @@ func main() {
    - 对于接口方法，**需要先将实例赋值给接口类型的变量，然后通过接口变量来调用方法**；
    - 如果一个类型实现了接口中定义的所有方法，那么该类型就实现了这个接口，**实现接口的类型可以被赋值给接口类型的变量，从而实现了多态性**；
    - **接收者是指针类型的接口方法，无法接收调用者是值类型的调用**，默认没有实现值类型的方法，因为值类型的方法修改的是调用者的副本，无法对原始调用者进行修改；
+- 当接收者是 map、chan 类型时，需要通过 make 来创建，并经过类型转换为定义的类型才可以调用其方法，否则会 panic；
 
 ## 六、使用场景
 ### 1，接收者必须是指针
@@ -336,7 +337,6 @@ func main() {
 
 ### 3，接收者必须是值
 * 强制方法的接收者不能被方法更改；
-* 当接收者是 map、func、chan 类型时，需要是值接收者，否则编译错误；
 
 ### 4，接收者应该是值
 * 接收者不需要被方法更新时；
