--- a/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
+++ b/docs/02.后端技术/00.Linux/00.Linux不常用但重要的命令.md
@@ -344,6 +344,13 @@ route add default gw 192.168.120.240
 ```
 :::
 
+### 5，获取真实ip
+* 通过访问外部域名的方式获取本机真实ip；
+```bash
+curl ifconfig.me
+curl ipinfo.io/ip
+```
+
 ## 四、CPU相关
 ### 1，top
 * 实时动态地查看系统的整体运行情况；
