--- a/docs/01.语言/02.C++/10.gdb定位死锁.md
+++ b/docs/01.语言/02.C++/10.gdb定位死锁.md
@@ -1,5 +1,5 @@
 ---
-title: gdb定位死锁
+title: 简要分析 gdb 定位死锁
 date: 2024-04-11 15:02:06
 permalink: /pages/56aa1c/
 categories:
@@ -11,6 +11,10 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 一、代码示例
+* 以下代码中，两个线程分别执行`threadFunc1` 和 `threadFunc1`，两个函数都是先对自己的锁加锁，再分别去对对方的锁加锁，再给对方锁加锁时会相互等待对方释放锁，造成死锁；
+* 可以通过 `g++ -std=c++11 -pthread -o m m.cpp` 生成二进制文件；
 
 ```cpp
 #include <iostream>
